# C-wilber

./: CODE_OF_CONDUCT.md  LICENSE  README.md
audio_capture/: CMakeLists.txt  audio_capture.cpp  audio_capture.h  audio_capture_dll_export.h  build.sh  py_audio_capture.cpp  setup.py  test_audio_capture.py
audio_capture/include/: audio_capture.h
audio_capture/src/: audio_capture.cpp  py_audio_capture.cpp
audio_capture_linux/: CMakeLists.txt  audio_capture_linux.cpp  audio_capture_linux.h  install_deps_ubuntu.sh  py_audio_capture_linux.cpp  test_audio_linux.py
doce/: CHANGELOG.md  UPDATE.md
game/: ball_game_1.cpp  ball_game_2.cpp
